--- a/index.html
+++ b/index.html
@@ -43,5 +43,14 @@
   </div>
 
   <script src="main.js"></script>
+    </div> <!-- closes login-container -->
+
+  <!-- Floating Background Picker outside the main box -->
+  <div id="backgroundPicker"> ... </div>
+
+  <script src="main.js"></script>
+  <script src="backgroundwidget.js"></script>
+</body>
+</html>
 </body>
 </html>
