--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Main login container -->
+  <!-- 🌸 MAIN LOGIN BOX (centered) -->
   <div class="login-container fade-in">
     <h1>GoCatwalk</h1>
     <p class="subtitle">Enter your name and GoSuperModel ID</p>
@@ -29,20 +29,23 @@
     </div>
   </div>
 
-  <!-- 🌸 Floating Background Picker (outside the centered layout) -->
+  <!-- 🌸 FLOATING BACKGROUND PICKER (completely separate from login box) -->
   <div id="backgroundPicker" class="hidden">
-    <div id="dragHandle">🎨 Choose Background</div>
+    <div id="dragHandle">🎀 Drag Me 🎀</div>
+    <h3>✨ Choose Your Catwalk Background</h3>
+
     <div id="backgroundOptions"></div>
 
-    <div id="avatarPreview" class="hidden">
-      <div class="avatar-container">
-        <img id="bgImage" class="bg-layer" alt="Background">
-        <img id="avatarImg" class="avatar-layer" alt="Your Avatar">
-      </div>
-      <button id="continueBtn">Continue to Lobby</button>
+    <div class="avatar-container">
+      <img id="bgImage" class="bg-layer" alt="Background">
+      <img id="avatarImg" class="avatar-layer" alt="Your Avatar">
     </div>
+
+    <button id="continueBtn">Continue to Lobby</button>
   </div>
 
+  <!-- Scripts -->
   <script src="main.js"></script>
+  <script src="backgroundwidget.js"></script>
 </body>
 </html>
