--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+ <!-- 🌸 FLOATING BACKGROUND PICKER (completely separate from login box) -->
+  <div id="backgroundPicker" class="hidden">
+    <div id="dragHandle">🎀 Drag Me 🎀</div>
+  <div position="fixed"
+    <h3>✨ Choose Your Catwalk Background</h3>
+
+    <div id="backgroundOptions"></div>
+
+    <div class="avatar-container">
+      <img id="bgImage" class="bg-layer" alt="Background">
+      <img id="avatarImg" class="avatar-layer" alt="Your Avatar">
+    </div>
+
+    <button id="continueBtn">Continue to Lobby</button>
+  </div>
+
+  <!-- Scripts -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,22 +47,7 @@
     </div>
   </div>
 
-  <!-- 🌸 FLOATING BACKGROUND PICKER (completely separate from login box) -->
-  <div id="backgroundPicker" class="hidden">
-    <div id="dragHandle">🎀 Drag Me 🎀</div>
-    <h3>✨ Choose Your Catwalk Background</h3>
-
-    <div id="backgroundOptions"></div>
-
-    <div class="avatar-container">
-      <img id="bgImage" class="bg-layer" alt="Background">
-      <img id="avatarImg" class="avatar-layer" alt="Your Avatar">
-    </div>
-
-    <button id="continueBtn">Continue to Lobby</button>
-  </div>
-
-  <!-- Scripts -->
+ 
   <script src="main.js"></script>
   <script src="backgroundwidget.js"></script>
 </body>
