--- a/backgroundwidget.html
+++ b/backgroundwidget.html
@@ -1,5 +1,5 @@
 <!-- Floating Background Picker -->
-<div id="backgroundPicker">
+<div id="backgroundPicker" position="fixed" z-index="-3">
   <h3>Choose your Catwalk Background</h3>
   <div id="backgroundOptions">
     <img src="https://gosupermodel.com/files/catwalk%20by%20falco%20avatar%20bg" alt="">
