--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- 🌸 FLOATING BACKGROUND PICKER (completely separate from login box) -->
   <div id="backgroundPicker">
     <div id="dragHandle">🎀 Drag Me 🎀</div>
-  <div position="fixed" z-index="-2"
+  <div position="absolute" z-index="-2"
     <h3>✨ Choose Your Catwalk Background</h3>
 
     <div id="backgroundOptions"></div>
